--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,12 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
+  
+  
+    <p>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </p>
  
   <p>
     <%= f.label :text %><br>
