--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,11 @@
     <%= @article.title %>
 </p>
 
+
+<div style="width:200px; height:auto">
+    <%= image_tag(@article.image) if @article.image.attached? %>
+</div>
+
 <p>
     <strong>Text:</strong>
     <%= @article.text %>
