--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 </p>
 
 
-<div style="width:200px; height:auto">
+<div style="width:200px; height:200px">
     <%= image_tag(@article.image) if @article.image.attached? %>
 </div>
 
