--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,12 @@
 <%= link_to 'New Article', new_article_path %>
 <%= link_to 'Login/Signup', root_url %>
 
+<h4>Search:</h4>
+  <%= form_tag(articles_path, method: :get) do %>
+    <%= text_field_tag(:search, params[:search]) %>
+    <%= submit_tag ("Search") %>
+  <% end %>
+
 <table>
   <tr>
     <th>Title</th>
