--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,22 +8,44 @@
     <th>Title</th>
     <th>Text</th>
     <th>Author</th>
+    <%= label_tag "Sort" %>
+    <%= check_box_tag "sort", 'asc', id:"sort"%> 
   </tr>
  
-  <% @articles.order("created_at desc").each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><% if article.user %>
-            <%= article.user.name %>
-          <% end %>
-      </td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy',
-                                article_path(article),
-                                method: :delete,
-                                data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
+  <% if  %>
+    <% @articles.order("created_at asc").each do |article| %>
+      <tr>
+        <td><%= article.title %></td>
+        <td><%= article.text %></td>
+        <td><% if article.user %>
+              <%= article.user.name %>
+            <% end %>
+        </td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Edit', edit_article_path(article) %></td>
+        <td><%= link_to 'Destroy',
+                                  article_path(article),
+                                  method: :delete,
+                                  data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+    
+    <% else %>
+      <% @articles.order("created_at desc").each do |article| %>
+        <tr>
+          <td><%= article.title %></td>
+          <td><%= article.text %></td>
+          <td><% if article.user %>
+                <%= article.user.name %>
+              <% end %>
+          </td>
+          <td><%= link_to 'Show', article_path(article) %></td>
+          <td><%= link_to 'Edit', edit_article_path(article) %></td>
+          <td><%= link_to 'Destroy',
+                                    article_path(article),
+                                    method: :delete,
+                                    data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    <% end %>
 </table>
