--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,11 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 h1 {
-    font-size: 32px;
-    color: blue;
+    font-size: 64px;
+    font-family: cursive;
+    color: #228B22;
+    text-align: center;
 }
 
 body
 {
-    background: #33DCE0;
+    background: #C5A3FF;
 }
