--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing Articles</h1>
 
 <%= link_to 'New Article', new_article_path %>
-<%= link_to 'Login/Signup', root_url %>
+<%= link_to 'Home', root_url %>
 
 <h4>Search:</h4>
   <%= form_tag(articles_path, method: :get) do %>
