--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,6 @@
     <%= link_to "Log Out", logout_path %>
     <% else %>
     <%= link_to "Sign Up", signup_path %> or
-    <%= link_to "Log In", login_path %>
+    <%= link_to "Login", login_path %>
     <% end %>
 </p>
